Fixed the font used and some spacing around column 1-3 q :q

--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,44 @@
 
 body{
   margin: 0;
-  padding: 0;
+  padding: 30px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 24px;
+  font-family: Helvetica, Sans-serif;
+  font-weight: lighter;
+  font-size: 13pt;
   min-width: 940px;
   border: 2px solid #504b4b;
   
 }
+p{margin:0px;}
 
 .container{
   width: 940px;
   margin: 0 auto;
 }
-
+.push-bottom{margin-bottom: 20px;}
 .d-flex{display: flex;}
 .justify-center{justify-content: center;}
 .align-center{align-items: center}
-.justify-content{justify-content: space-evenly;}
+.justify-content{justify-content:first baseline;}
 
 .header-wrapper{
   border: 2px solid black;
   margin-bottom: 15px;
+  height: 70px;
 }
 .into-content{
   border: 2px solid black;
   margin-bottom: 15px;
+  
 }
 .column-wrapper{
-  padding: 15px;
+  padding: 15px 8px 15px 18px;
 }
 .column-1-3{
-  height: 260px;
+  height: 300px;
   border: 2px dashed black;
-  width: 100%;
+  width: 31%;
   margin-right:20px;
 }
 .column-2{
@@ -44,26 +48,27 @@ body{
 
 .dynamic-content{
   border: 2px solid black;
-  background: linear-gradient(rgb(99, 98, 98),rgb(209, 204, 204));
+  background: linear-gradient(rgb(182, 182, 182),rgb(238, 236, 236));
   margin-bottom:20px;
 }
 .content-wrapper{
-  padding: 15px;
+  padding: 15px 22px 17px 22px;
 }
 
 .column-4-5{
-  height: 225px;
+  height: 245px;
   border: 2px dashed black;
-  width: 100%;
+  width: 37%;
 }
 
 .column-4{
-  margin-right: 20px;
+  margin-right: 25px;
 }
 
 .footer{
   border: 2px solid black;
   margin-bottom: 10px;
+  height: 56px;
 }
 
 
